--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ca">
 	<head>
@@ -15,5 +16,6 @@
 		<a href="divisio.html">d) Divisió de 3 operands</a><br>
 		<a href="potenciacio.html">e) Potenciació amb 3 operands</a><br>
 		<a href="trigonometria.html">f) Operacions trigonomètriques bàsiques</a><br>
+		<a href="exponnecials.html">f) Operacions exponencials bàsiques</a><br>
 	</body>
 <html>
