Versió 1.3.1 del projecte gp2f4act12

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,6 @@
 		<a href="trigonometria.html">f) Operacions trigonomètriques bàsiques</a><br>
 		<a href="logaritmes.html">f) Operacions logarítmiques bàsiques</a><br>
 		<a href="exponnecials.html">f) Operacions exponencials bàsiques</a><br>
-		<a href="conversions.html">f) Operacions de conversió bàsiques</a><br>
+		<a href="conversions.html">f) Operacions de conversió bàsiquess</a><br>
 	</body>
 <html>
